# pxa_engine_win32

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  save_project.py
locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  ko.yml  ru.yml  zh-CN.yml  zh-TW.yml
src/: lib.rs  main.rs
src/animation/: controller.rs  history.rs  mod.rs  project.rs  state.rs
src/app/: command_handler.rs  commands.rs  context.rs  engine.rs  error.rs  events.rs  input_handler.rs  io_service.rs  layer_service.rs  mod.rs  shortcut_manager.rs  state.rs  tool_manager.rs  ui_state.rs  view_state.rs
src/core/: blend_mode.rs  color.rs  error.rs  id_gen.rs  layer.rs  mod.rs  palette.rs  path.rs  selection.rs  store.rs  symmetry.rs
src/format/: block.rs  error.rs  header.rs  hex_palette.rs  mod.rs  payload.rs  stream.rs
src/history/: manager.rs  patch.rs
src/render/: anim_compositor.rs  anim_shader.wgsl  blend.rs  compositor.rs  mod.rs  texture_manager.rs
src/tools/: bucket.rs  create_bone.rs  ellipse_select.rs  eyedropper.rs  geometry.rs  mod.rs  move_tool.rs  pen.rs  pencil.rs  rect_select.rs  tool_trait.rs  transform.rs
tests/: animation_integrity_tests.rs  animation_playback_tests.rs  animation_undo_redo_tests.rs  bone_and_animation_tests.rs  bucket_tool_tests.rs  eyedropper_tests.rs  integration_animation.rs  integration_core.rs  integration_tools.rs  layer_management_tests.rs  layer_properties_tests.rs  move_tool_tests.rs  palette_tests.rs  pen_tool_tests.rs  pencil_eraser_tests.rs  selection_tool_tests.rs  spine_offset_fix_tests.rs  stress_and_precision.rs  transform_tool_tests.rs
(+40 files in other folders)
